--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -30,7 +30,7 @@ jobs:
         pip install requests
     - name: Clone source code
       run: |
-        git clone --depth=1 https://github.com/wangziyingwen/Autoapi.git /opt/Autoapi	
+        git clone --depth=1 https://github.com/AlifeLines/Autoapi-test /opt/Autoapi	
     - name: Test Api 
       run: |
         cd /opt/Autoapi
